# router-lint

./: Cargo.toml  README.md  routes.ts
.cargo/: config.toml
.github/workflows/: cargo.yml  crate-publish.yml
src/: context.rs  diagnostic.rs  handler.rs  main.rs  rules.rs
src/rules/: children_key.rs  redirect.rs  repeat.rs
