[package]
name = "route-lint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3.13"
swc_ecmascript = { version = "0.82.0", features = ["parser"] }
deno_ast = { version = "0.4.1", features = ["transforms", "utils", "visit", "view"] }
indicatif = {version = "*", features = ["rayon"]}
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"