[package]
name = "route-lint"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "lint for router"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3.13"
swc_ecmascript = { version = "0.82.0", features = ["parser"] }
deno_ast = { version = "0.5.0", features = ["transforms", "utils", "visit", "view"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
annotate-snippets = { version = "0.9.1", features = ["color"] }